# chore-kanban

./: .env  .gitignore  Cargo.toml  README.md  chore.db  chores
migrations/: 20250920163841_init.sql  20250920183705_some_chores.sql  20250920190405_more_chore.sql  20250926213039_cadence_field.sql  20250926215439_check_softener.sql  20250927173738_set1.sql  20250927180704_check_mail.sql  20250928004139_laundry_split.sql
src/: main.rs
src/client/: index.html
src/client/src/: App.css  App.tsx  index.css
