[package]
name = "chore-kanban"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.4"
chrono = "0.4.42"
dotenvy = "0.15.7"
mime_guess = "2.0.5"
rust-embed = "8.7.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
